@@ -18,6 +18,8 @@ package com.android.bluetooth.hfp;
 
 import static android.Manifest.permission.BLUETOOTH_CONNECT;
 
+import static com.android.modules.utils.build.SdkLevel.isAtLeastU;
+
 import android.annotation.RequiresPermission;
 import android.bluetooth.BluetoothAdapter;
 import android.bluetooth.BluetoothAssignedNumbers;
@@ -81,7 +83,7 @@ import java.util.Scanner;
 @VisibleForTesting
 public class HeadsetStateMachine extends StateMachine {
     private static final String TAG = "HeadsetStateMachine";
-    private static final boolean DBG = false;
+    private static final boolean DBG = true;
 
     static final int CONNECT = 1;
     static final int DISCONNECT = 2;
@@ -158,8 +160,6 @@ public class HeadsetStateMachine extends StateMachine {
     private boolean mNeedDialingOutReply;
     // Audio disconnect timeout retry count
     private int mAudioDisconnectRetry = 0;
-
-    static final int HFP_SET_AUDIO_POLICY = 1;
 
     private BluetoothSinkAudioPolicy mHsClientAudioPolicy;
 
@@ -485,7 +485,10 @@ public class HeadsetStateMachine extends StateMachine {
             mHasWbsEnabled = false;
             mHasSwbEnabled = false;
             mHasNrecEnabled = false;
+
             broadcastStateTransitions();
+            logFailureIfNeeded();
+
             // Remove the state machine for unbonded devices
             if (mPrevState != null
                     && mAdapterService.getBondState(mDevice) == BluetoothDevice.BOND_NONE) {
@@ -507,7 +510,9 @@ public class HeadsetStateMachine extends StateMachine {
                     if (!mNativeInterface.connectHfp(device)) {
                         stateLogE("CONNECT failed for connectHfp(" + device + ")");
                         // No state transition is involved, fire broadcast immediately
-                        broadcastConnectionState(device, BluetoothProfile.STATE_DISCONNECTED,
+                        broadcastConnectionState(
+                                device,
+                                BluetoothProfile.STATE_DISCONNECTED,
                                 BluetoothProfile.STATE_DISCONNECTED);
                         break;
                     }
@@ -578,6 +583,25 @@ public class HeadsetStateMachine extends StateMachine {
                 default:
                     stateLogE("Incorrect state: " + state);
                     break;
+            }
+        }
+
+        private void logFailureIfNeeded() {
+            if (mPrevState == mConnecting || mPrevState == mDisconnected) {
+                // Result for disconnected -> disconnected is unknown as it should
+                // not have occurred.
+                int result =
+                        (mPrevState == mConnecting)
+                                ? BluetoothProtoEnums.RESULT_FAILURE
+                                : BluetoothProtoEnums.RESULT_UNKNOWN;
+
+                BluetoothStatsLog.write(
+                        BluetoothStatsLog.BLUETOOTH_PROFILE_CONNECTION_ATTEMPTED,
+                        BluetoothProfile.A2DP,
+                        result,
+                        mPrevState.getConnectionStateInt(),
+                        BluetoothProfile.STATE_DISCONNECTED,
+                        BluetoothProtoEnums.REASON_UNEXPECTED_STATE);
             }
         }
     }
@@ -1092,7 +1116,9 @@ public class HeadsetStateMachine extends StateMachine {
                 // or the retry count reached MAX_RETRY_DISCONNECT_AUDIO.
                 mAudioDisconnectRetry = 0;
             }
+
             broadcastStateTransitions();
+            logSuccessIfNeeded();
         }
 
         @Override
@@ -1123,10 +1149,14 @@ public class HeadsetStateMachine extends StateMachine {
                 case CONNECT_AUDIO:
                     stateLogD("CONNECT_AUDIO, device=" + mDevice);
                     mSystemInterface.getAudioManager().setA2dpSuspended(true);
-                    mSystemInterface.getAudioManager().setLeAudioSuspended(true);
+                    if (isAtLeastU()) {
+                        mSystemInterface.getAudioManager().setLeAudioSuspended(true);
+                    }
                     if (!mNativeInterface.connectAudio(mDevice)) {
                         mSystemInterface.getAudioManager().setA2dpSuspended(false);
-                        mSystemInterface.getAudioManager().setLeAudioSuspended(false);
+                        if (isAtLeastU()) {
+                            mSystemInterface.getAudioManager().setLeAudioSuspended(false);
+                        }
                         stateLogE("Failed to connect SCO audio for " + mDevice);
                         // No state change involved, fire broadcast immediately
                         broadcastAudioState(mDevice, BluetoothHeadset.STATE_AUDIO_DISCONNECTED,
@@ -1184,6 +1214,18 @@ public class HeadsetStateMachine extends StateMachine {
                 default:
                     stateLogE("processAudioEvent: bad state: " + state);
                     break;
+            }
+        }
+
+        private void logSuccessIfNeeded() {
+            if (mPrevState == mConnecting || mPrevState == mDisconnected) {
+                BluetoothStatsLog.write(
+                        BluetoothStatsLog.BLUETOOTH_PROFILE_CONNECTION_ATTEMPTED,
+                        BluetoothProfile.HEADSET,
+                        BluetoothProtoEnums.RESULT_SUCCESS,
+                        mPrevState.getConnectionStateInt(),
+                        BluetoothProfile.STATE_CONNECTED,
+                        BluetoothProtoEnums.REASON_SUCCESS);
             }
         }
     }
@@ -1913,7 +1955,7 @@ public class HeadsetStateMachine extends StateMachine {
 
             String arg = input.substring(i, j);
             try {
-                out.add(new Integer(arg));
+                out.add(Integer.valueOf(arg));
             } catch (NumberFormatException e) {
                 out.add(arg);
             }
@@ -1966,87 +2008,96 @@ public class HeadsetStateMachine extends StateMachine {
     }
 
     /**
-     * Process Android specific AT commands.
+     * Look for Android specific AT command starts with AT+ANDROID and try to process it
      *
-     * @param atString AT command after the "AT+" prefix. Starts with "ANDROID"
+     * @param atString AT command in string
      * @param device Remote device that has sent this command
+     * @return true if the command is processed, false if not.
      */
-    private void processAndroidAt(String atString, BluetoothDevice device) {
-        log("processAndroidSpecificAt - atString = " + atString);
+    @VisibleForTesting
+    boolean checkAndProcessAndroidAt(String atString, BluetoothDevice device) {
+        log("checkAndProcessAndroidAt - atString = " + atString);
 
         if (atString.equals("+ANDROID=?")) {
             // feature request type command
             processAndroidAtFeatureRequest(device);
+            mNativeInterface.atResponseCode(device, HeadsetHalConstants.AT_RESPONSE_OK, 0);
+            return true;
         } else if (atString.startsWith("+ANDROID=")) {
             // set type command
             int equalIndex = atString.indexOf("=");
             String arg = atString.substring(equalIndex + 1);
 
             if (arg.isEmpty()) {
-                Log.e(TAG, "Command Invalid!");
-                mNativeInterface.atResponseCode(device, HeadsetHalConstants.AT_RESPONSE_ERROR, 0);
-                return;
+                Log.w(TAG, "Android AT command is empty");
+                return false;
             }
 
             Object[] args = generateArgs(arg);
 
-            if (!(args[0] instanceof Integer)) {
-                Log.e(TAG, "Type ID is invalid");
+            if (!(args[0] instanceof String)) {
+                Log.w(TAG, "Incorrect type of Android AT command!");
                 mNativeInterface.atResponseCode(device, HeadsetHalConstants.AT_RESPONSE_ERROR, 0);
-                return;
+                return true;
             }
 
-            int type = (Integer) args[0];
+            String type = (String) args[0];
 
-            if (type == HFP_SET_AUDIO_POLICY) {
-                processAndroidAtSetAudioPolicy(args, device);
+            if (type.equals(BluetoothSinkAudioPolicy.HFP_SET_SINK_AUDIO_POLICY_ID)) {
+                Log.d(TAG, "Processing command: " + atString);
+                if (processAndroidAtSinkAudioPolicy(args, device)) {
+                    mNativeInterface.atResponseCode(device,
+                            HeadsetHalConstants.AT_RESPONSE_OK, 0);
+                } else {
+                    Log.w(TAG, "Invalid SinkAudioPolicy parameters!");
+                    mNativeInterface.atResponseCode(device,
+                            HeadsetHalConstants.AT_RESPONSE_ERROR, 0);
+                }
+                return true;
             } else {
-                Log.w(TAG, "Undefined AT+ANDROID command");
-                mNativeInterface.atResponseCode(device, HeadsetHalConstants.AT_RESPONSE_ERROR, 0);
-                return;
+                Log.w(TAG, "Undefined Android command type: " + type);
+                return false;
             }
-        } else {
-            Log.e(TAG, "Undefined AT+ANDROID command");
-            mNativeInterface.atResponseCode(device, HeadsetHalConstants.AT_RESPONSE_ERROR, 0);
-            return;
         }
-        mNativeInterface.atResponseCode(device, HeadsetHalConstants.AT_RESPONSE_OK, 0);
+
+        Log.w(TAG, "Unhandled +ANDROID command: " + atString);
+        return false;
     }
 
     private void processAndroidAtFeatureRequest(BluetoothDevice device) {
         /*
-            replying with +ANDROID=1
-            here, 1 is the feature id for audio policy
-
-            currently we only support one type of feature
+            replying with +ANDROID: (<feature1>, <feature2>, ...)
+            currently we only support one type of feature: SINKAUDIOPOLICY
         */
         mNativeInterface.atResponseString(device,
                 BluetoothHeadset.VENDOR_RESULT_CODE_COMMAND_ANDROID
-                + ": " + HFP_SET_AUDIO_POLICY);
+                + ": (" + BluetoothSinkAudioPolicy.HFP_SET_SINK_AUDIO_POLICY_ID + ")");
     }
 
     /**
-     * Process AT+ANDROID AT command
+     * Process AT+ANDROID=SINKAUDIOPOLICY AT command
      *
      * @param args command arguments after the equal sign
      * @param device Remote device that has sent this command
+     * @return true on success, false on error
      */
-    private void processAndroidAtSetAudioPolicy(Object[] args, BluetoothDevice device) {
+    @VisibleForTesting
+    boolean processAndroidAtSinkAudioPolicy(Object[] args, BluetoothDevice device) {
         if (args.length != 4) {
-            Log.e(TAG, "processAndroidAtSetAudioPolicy() args length must be 4: "
+            Log.e(TAG, "processAndroidAtSinkAudioPolicy() args length must be 4: "
                     + String.valueOf(args.length));
-            return;
+            return false;
         }
         if (!(args[1] instanceof Integer) || !(args[2] instanceof Integer)
                 || !(args[3] instanceof Integer)) {
-            Log.e(TAG, "processAndroidAtSetAudioPolicy() argument types not matched");
-            return;
+            Log.e(TAG, "processAndroidAtSinkAudioPolicy() argument types not matched");
+            return false;
         }
 
         if (!mDevice.equals(device)) {
-            Log.e(TAG, "processAndroidAtSetAudioPolicy(): argument device " + device
+            Log.e(TAG, "processAndroidAtSinkAudioPolicy(): argument device " + device
                     + " doesn't match mDevice " + mDevice);
-            return;
+            return false;
         }
 
         int callEstablishPolicy = (Integer) args[1];
@@ -2058,6 +2109,7 @@ public class HeadsetStateMachine extends StateMachine {
                 .setActiveDevicePolicyAfterConnection(connectingTimePolicy)
                 .setInBandRingtonePolicy(inbandPolicy)
                 .build());
+        return true;
     }
 
     /**
@@ -2129,6 +2181,9 @@ public class HeadsetStateMachine extends StateMachine {
             processAtCpbs(atCommand.substring(5), commandType, device);
         } else if (atCommand.startsWith("+CPBR")) {
             processAtCpbr(atCommand.substring(5), commandType, device);
+        } else if (atCommand.startsWith("+ANDROID")
+                && checkAndProcessAndroidAt(atCommand, device)) {
+            // Do nothing
         } else {
             processVendorSpecificAt(atCommand, device);
         }
